--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,6 +4,19 @@
   box-sizing: border-box;
 }
 /* shared style */
+
+.font-open-sans {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  
+}
+.logo h2{
+  font-size:45px;
+  font-weight:900 ;
+}
+.color-orange{
+  color:#FD6E0A;
+}
 .btn{
   background-color: #FD6E0A;
   border:none;
@@ -12,30 +25,28 @@
   font-size: 20px;
   font-weight: bold;
   color: white;
-  
+  /* etar karone cursor button er opr nile pointer change hoy  */
+  cursor:pointer;
 }
-.font-open-sans {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  
-}
-.logo h2{
-  font-size:45px;
-  font-weight:bolder ;
-}
-.color-orange{
-  color:#FD6E0A;
-}
+/* .section-heading{ */
+  /* max-width: 827px; */
+  /* text-align:center ; */
+  /* margin: 0 auto; */
+/* } */
 
 /* main style */
 header{
-  background-color: #FFF8F3;
+  background-color:#FFF8F3;
+  background: url("../images/developer.png"),url("../images/header_bg.png"),#FFF8F3;
+  background-repeat: no-repeat;
+  background-position:23px 38px,bottom right;
   padding-top: 51px;
+
 }
 nav{
   width:71%;
   max-width: 1140px;
-  border:1px solid red;
+  /* border:1px solid red; */
   margin: 0px auto;
   display:flex;
   justify-content: space-between;
@@ -53,4 +64,39 @@ align-items: center;
   /* underline remove krte */
   text-decoration: none;
 
+}
+#banner{
+  /* border:1px solid red; */
+  margin:47px 38px 0px 230px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#banner .banner-content{
+  max-width: 585px;
+}
+#banner .banner-content h2{
+  font-size: 45px;
+  font-weight: 600;
+  color:#474747;
+  margin-bottom: 5px;
+
+}
+#banner .banner-content h1{
+  font-size: 85px;
+  font-weight: bold;
+  color:black;
+  margin-bottom:20px;
+
+}
+#banner .banner-content p{
+  font-size: 18px;
+  color:#757575;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+#banner .banner-image img{
+  max-width: 585px;
+  /* eta r karone image er niche j akta gap pore oita badd jay */
+  vertical-align: middle;
 }
