--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -119,9 +119,9 @@ align-items: center;
 }
 #about .about-container{
 
-  width:71%
+  width:71%;
   max-width:1140px;
-  margin 0 auto;
+  margin: 0 auto;
   text-align:center;
   background-color: #FFF8F3;
   padding: 131px 156px;
@@ -138,3 +138,36 @@ align-items: center;
 .about-info .info-card h4{
   font-size: 20px;
 }
+#Skills{
+ padding-top:130px;
+}
+#Skills .Skills-container {
+  width:71%;
+  max-width:1140px;
+  margin: 0 auto;
+}
+#Skills .Skills-container .skill-box{
+  display:flex;
+  gap:24px;
+}
+.skill-box .skill-card{
+  padding:30px;
+  box-shadow: 0 6px 50px 0 #00000038;
+  max-width: 267px;
+
+}
+.skill-card img{
+  max-width: 44px;
+  margin-bottom: 30px;
+}
+.skill-card h3{
+  font-size: 20px;
+  color:black;
+  margin-bottom: 20px;
+}
+.skill-card p{
+  font-size: 16px;
+  color:#757575;
+  line-height: 28px;
+}
+
